--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,108 +1,3 @@
-- date: "January 2, 2019"
-  headline: "One year at the <a target='_blank' href='https://www.santafe.edu'>Santa Fe Institute</a>."
+- date: "November 19, 2019"
+  headline: "Started job at  <a target='_blank' href='https://www.broadinstitute.org/'>The Broad Institute</a> as Machine Learning Scientist."
   fullnews: 
-
-- date: "December 12-19, 2018"
-  headline: "Visiting <a target='_blank' href='http://www.ictp-saifr.org/'>ICTP-SAIFR</a> in São Paulo, Brazil."
-  fullnews: "I am giving a talk at ICTP-SAIFR on December 13th and a talk at the Dept of Ecology, USP on December 14th."
-  fullnews:
-
-- date: "October 8, 2018"
-  headline: "Got the Italian Scientific Habilitation (ASN) as <a target='_blank' href='https://asn16.cineca.it/pubblico/miur/esito/05%252FC1/2/5'>Associate Professor in Ecology (05/C1 II fascia)</a>."
-  fullnews:
-
-- date: "September 26, 2018"
-  headline: "Invited speaker at the <a target='_blank' href='https://easychair.org/cfp/ReACT3'>ReACT 3</a> satellite at the
-            <a target='_blank' href='http://ccs2018.web.auth.gr/'>CCS 2018</a> in Thessaloniki, Greece."
-  fullnews:
-
-- date: "September 19, 2018"
-  headline: "Paper on tipping points in animal societies published in <a target='_blank' href='http://rspb.royalsocietypublishing.org/content/285/1887/20181282'>Proceedings of the Royal Society B</a>."
-  fullnews:
-
-- date: "September 12, 2018"
-  headline: "Got the Italian Scientific Habilitation (ASN) as <a target='_blank' href='https://asn16.cineca.it/pubblico/miur/esito/02%252FD1/2/5'>Associate Professor in Applied Physics (02/D1 II fascia)</a>."
-  fullnews:
-
-- date: "August 16, 2018"
-  headline: "Paper on size control in mammalian cells published in <a target='_blank' href='https://www.nature.com/articles/s41467-018-05393-0'>Nature Communications</a>."
-  fullnews:
-
-- date: "August 8, 2018"
-  headline: "Got the Italian Scientific Habilitation (ASN) as <a target='_blank' href='https://asn16.cineca.it/pubblico/miur/esito-abilitato/02%252FB2/2/5'>Associate Professor in Theoretical Physics of Matter (02/B2 II fascia)</a>."
-  fullnews:
-
-- date: "July 30, 2018"
-  headline: "Paper on growth rate fluctuations in E. coli published in <a target='_blank' href='https://www.frontiersin.org/articles/10.3389/fmicb.2018.01541/full'>Frontiers in Microbiology</a>."
-  fullnews:
-
-- date: "July 25, 2018"
-  headline: "Paper on paper on dependency structures in component systems published in <a target='_blank' href='https://journals.aps.org/pre/abstract/10.1103/PhysRevE.98.012315'>PRE</a>."
-  fullnews:
-
-
-- date: "July 9, 2018"
-  headline: "Paper on the random zoo published in <a target='_blank' href='https://www.nature.com/articles/s41559-018-0603-6'>Nature Ecology & Evolution</a>."
-  fullnews: 
-
-- date: "June 11-15, 2018"
-  headline: "Attending <a target='_blank' href='https://www.netsci2018.com/'>Netsci</a> conference and co-organizing a <a target='_blank' href='http://liphlab.github.io/'>satellite on June 12th</a>"
-  fullnews: 
-
-- date: "May 24-25, 2018"
-  headline: "Attending the first <a target='_blank' href='https://www.eventbrite.com/e/bu-theory-in-biology-meeting-tickets-40941663618'>Theory in Biology Meeting</a> in Boston."
-  fullnews: 
-
-
-- date: "May 7-11, 2018"
-  headline: "At a <a target='_blank' href='http://www.lgm.upmc.fr/mcl/retreat2018/'>great meeting</a> in Alghero."
-  fullnews: "#marcomeeting"
-
-
-- date: "April 16, 2018"
-  headline: "New paper on cell-size control on <a target='_blank' href='https://www.biorxiv.org/content/early/2018/04/16/301671'>Biorxiv</a>."
-  fullnews: 
-
-- date: "March 5-9, 2018"
-  headline: "Attending the <a target='_blank' href='https://www.aps.org/meetings/march/about.cfm'>APS March Meeting</a> and giving a <a target='_blank' href='http://meetings.aps.org/Meeting/MAR18/Session/K51.11'>talk on Wednesday</a>"
-  fullnews: 
-
-- date: "January 20, 2018"
-  headline: "New paper on dependency structures in component systems on <a target='_blank' href='https://arxiv.org/abs/1801.06438'>ArXiv</a>."
-  fullnews: 
-
-- date: "January 2, 2018"
-  headline: "First day at the <a target='_blank' href='https://www.santafe.edu'>Santa Fe Institute</a>."
-  fullnews: 
-
-- date: "December 22, 2017"
-  headline: "Last day in the <a target='_blank' href='http://allesinalab.uchicago.edu/'>Allesina Lab</a>."
-  image: "allesinacoffee.png"
-  fullnews: "While this is not my last day in Chicago, this will be the last day with the usual routine (dominated by espressos).
-            The more than 1000 days that I spent in the Allesina Lab have been intense and very fun. Thanks to all the people I have shared
-            this path with: Stefano, Matt, Liz, Gyuri, Carlos, Theo, Dan, José, Angelo, Kevin, Filippo, Zach and Vicente."  
-
-- date: "November 21-30, 2017"
-  headline: Teaching a class on random matrices in Padova.
-  fullnews:
-
-- date: "August 30, 2017"
-  headline: "New paper on effect of population abundance on stability on <a target='_blank' href='https://arxiv.org/abs/1708.08837'>ArXiv</a>."
-  fullnews: 
-
-- date: "August 11, 2017"
-  headline: "New paper on diversity/stability on <a target='_blank' href='https://arxiv.org/abs/1708.03154'>ArXiv</a>."
-  fullnews: 
-
-- date: "July 26, 2017"
-  headline: "Paper on higher-order interactions published in <a target='_blank' href='https://www.nature.com/nature/journal/vaop/ncurrent/full/nature23273.html'>Nature</a>."
-  fullnews: 
-
-- date: "July 3, 2017"
-  headline: "Paper on last names published in <a target='_blank' href='http://www.pnas.org/content/114/29/7600.short'>PNAS</a>."
-  fullnews: 
-
-- date: "June 20, 2017"
-  headline: "Paper on size control in mammalian cells on <a target='_blank' href='http://www.biorxiv.org/content/early/2017/06/20/152728'>Biorxiv</a>."
-  fullnews: 
-
